# grchive_v2

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
devops/vault/: BUILD.bazel  vault_dev_login.sh  vault_entrypoint.sh  vault_init.sh
devops/vault/config/: dev.hcl
devops/vault/policies/: webapp-policy.hcl
src/shared/golang/backend/: BUILD.bazel  backend.go  relationships.go  resource.go  rollforward.go  stats.go  user_orgs.go
src/shared/golang/backend/audit/: BUILD.bazel  audit.go
src/shared/golang/backend/comments/: BUILD.bazel  comments.go  create.go  delete.go  get.go  list.go  thread.go  update.go
src/shared/golang/backend/controls/: BUILD.bazel  controls.go  create.go  delete.go  get.go  list.go  stats.go  update.go
src/shared/golang/backend/databases/: BUILD.bazel  create.go  databases.go  delete.go  get.go  list.go  stats.go  update.go
src/shared/golang/backend/engagements/: BUILD.bazel  create.go  engagements.go  get.go  list.go  update.go
src/shared/golang/backend/gl/: BUILD.bazel  create.go  delete.go  get.go  gl.go  list.go  stats.go  update.go
src/shared/golang/backend/inventory/: BUILD.bazel  create.go  delete.go  get.go  inventory.go  list.go  stats.go  update.go
src/shared/golang/backend/machine_state/: BUILD.bazel  machine_state.go  update.go
src/shared/golang/backend/orgs/: BUILD.bazel  create.go  get.go  org.go  update.go
src/shared/golang/backend/risks/: BUILD.bazel  create.go  delete.go  get.go  list.go  risks.go  stats.go  update.go
src/shared/golang/backend/roles/: BUILD.bazel  get.go  list.go  roles.go
src/shared/golang/backend/sessions/: BUILD.bazel  create.go  delete.go  get.go  sessions.go  update.go
src/shared/golang/backend/systems/: BUILD.bazel  create.go  databases.go  delete.go  get.go  list.go  stats.go  update.go
src/shared/golang/backend/users/: BUILD.bazel  create.go  get.go  list.go  update.go  user.go
src/shared/golang/backend/utility/: BUILD.bazel  jwt.go  tx.go
src/shared/golang/backend/vendors/: BUILD.bazel  create.go  delete.go  get.go  list.go  stats.go  update.go  vendors.go
src/shared/golang/backend/vm/: BUILD.bazel  list.go  vm.go
src/shared/golang/gin_middleware/gin_acl/: BUILD.bazel  acl.go  roles.go  user.go
src/shared/golang/gin_middleware/gin_backend_utility/: BUILD.bazel  comments.go  constants.go  errors.go  gl.go  log.go  middleware.go  request.go  resource.go  tx.go
src/shared/golang/vault/auth/: BUILD.bazel  README.md  approle.go  auth.go
src/shared/golang/zipfs/: BUILD.bazel  README.md  zipfs.go
src/webapp/: BUILD.bazel  app.go  config.go  main.go  oauth.go  pages.go
src/webapp/client/: BUILD.bazel  tsconfig.json
src/webapp/client/src/sass/: main.scss
src/webapp/client/src/ts/: error.ts  main.ts  stats.ts  time.ts
src/webapp/client/src/ts/api/: client.ts  comments.ts  controls.ts  database.ts  engagements.ts  gl.ts  handler.ts  inventory.ts  orgs.ts  relationships.ts  risks.ts  roles.ts  system.ts  url.ts  user.ts  vendor.ts  vm.ts
src/webapp/client/src/ts/frontend/: formRules.ts  navLink.ts  routeUtility.ts
src/webapp/client/src/ts/stores/: store.ts
src/webapp/client/src/ts/stores/modules/: appLayoutStore.ts  controlStore.ts  databaseStore.ts  engagementStore.ts  errorStore.ts  glStore.ts  inventoryStore.ts  orgStore.ts  permissionStore.ts  riskStore.ts  systemStore.ts  userStore.ts  vendorStore.ts
src/webapp/client/src/ts/types/: comments.ts  controls.ts  databases.ts  engagements.ts  errors.ts  gl.ts  inventory.ts  machineState.ts  orgs.ts  relationships.ts  resource.ts  risks.ts  roles.ts  systems.ts  users.ts  vendors.ts  vm.ts
src/webapp/client/src/vue/: BaseAppBar.vue  BaseTemplate.vue  ErrorPage.vue  ErrorPopupManager.vue  ErrorWrapperDisplay.vue  UserTemplate.vue
src/webapp/client/src/vue/loading/: LoadingContainer.vue  RestrictRolePermissionBase.vue  RestrictRolePermissionButton.vue  RestrictRolePermissionContainer.vue  RestrictRolePermissionTab.vue
src/webapp/client/src/vue/navbar/: GenericNavBar.vue  GenericNavBarItem.vue
src/webapp/client/src/vue/orgs/: OrgAppBar.vue  OrgNavBar.vue  OrgProfile.vue  OrgTemplate.vue
src/webapp/client/src/vue/orgs/engagements/: EngagementAppBar.vue  EngagementNavBar.vue  EngagementTemplate.vue  OrgEngagement.vue  OrgEngagementList.vue
src/webapp/client/src/vue/orgs/profile/: OrgOverview.vue  OrgTree.vue
src/webapp/client/src/vue/shared/: ConfirmationDialog.vue  EditStateButtons.vue  FullHeightBase.vue  GenericCrudList.vue  StatDisplay.vue
src/webapp/client/src/vue/shared/form/: DateRangePicker.vue  DateTimePicker.vue  RRuleCreator.vue
src/webapp/client/src/vue/shared/grid/: ControlFrequencyRenderer.vue  ControlTypeRenderer.vue  DatabaseTypeRenderer.vue  (+6 more)
src/webapp/client/src/vue/types/: GenericSaveEditDialog.vue
src/webapp/client/src/vue/user/: UserAppBar.vue  UserHome.vue  UserNavBar.vue  UserProfile.vue
src/webapp/client/src/vue/verification/: VerifyEmailBanner.vue
src/webapp/config/: dev.toml
src/webapp/rest/: v1.go
src/webapp/rest/v1/: comments.go  controls.go  databases.go  engagements.go  gl.go  inventory.go  orgs.go  relationships.go  risks.go  roles.go  stats.go  systems.go  users.go  vendors.go  vm.go
src/webapp/session/: BUILD.bazel  login.go  session.go
src/webapp/templates/: base.tmpl
src/website/: BUILD.bazel  app.go  config.go  main.go  pages.go  sitemap.xml
src/website/client/: BUILD.bazel
src/website/client/src/sass/: landing.scss  main.scss
src/website/client/src/ts/: main.ts  url.ts
src/website/client/src/vue/: ContactUsPage.vue  GettingStartedPage.vue  LandingPage.vue  LearnMorePage.vue
src/website/client/src/vue/components/: FeatureHighlight.vue  FeatureSummary.vue  HeroImage.vue  LandingCarousel.vue  LandingFooter.vue  LandingPageAppBar.vue  StandaloneCta.vue
src/website/client/webpack/: base.config.js  prod.config.js
src/website/config/: dev.toml
src/website/templates/: base.tmpl  contactUs.tmpl  gettingStarted.tmpl  index.tmpl  learnMore.tmpl
static/assets/: BUILD.bazel  SOURCES
static/assets/favicon/: site.webmanifest
(+221 files in other folders)
