package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

filegroup(
    name = "templates",
    srcs = glob([
        "templates/**/*.tmpl"
    ])
)

go_binary(
    name = "webapp",
    srcs = glob(["*.go", "rest/**/*.go"]),
    deps = [
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gin_contrib_logger//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_pelletier_go_toml//:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "//src/shared/golang/backend:lib",
        "//src/shared/golang/backend/audit:lib",
        "//src/shared/golang/backend/comments:lib",
        "//src/shared/golang/backend/controls:lib",
        "//src/shared/golang/backend/engagements:lib",
        "//src/shared/golang/backend/gl:lib",
        "//src/shared/golang/backend/orgs:lib",
        "//src/shared/golang/backend/users:lib",
        "//src/shared/golang/backend/risks:lib",
        "//src/shared/golang/backend/roles:lib",
        "//src/shared/golang/backend/sessions:lib",
        "//src/shared/golang/backend/utility:lib",
        "//src/shared/golang/envconfig:lib",
        "//src/shared/golang/fusionauth:lib",
        "//src/shared/golang/gin_middleware/gin_acl:lib",
        "//src/shared/golang/gin_middleware/gin_backend_utility:lib",
        "//src/shared/golang/gin_middleware/redirect_response:lib",
        "//src/shared/golang/gin_middleware/reverse_proxy:lib",
        "//src/shared/golang/vault:lib",
        "//src/shared/golang/vault/auth:lib",
        "//src/shared/golang/zipfs:lib",
        "//src/webapp/session:lib",
    ],
    data = [
        "//static/assets:assets",
        "//src/webapp/client:bundle",
        ":templates",
        "robots.txt",
    ],
)

