package(default_visibility=["//visibility:public"])
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")
load("//src/shared/webpack:files.bzl", "webpack_config_files")

webpack(
    name = "bundle",
    outs = ["webappClient.zip"],
    args = [
        "$(execpath src/ts/main.ts)",
        "--config",
    ] + select({
        "//:production": ["$(execpath //src/shared/webpack:prod.config.js)"],
        "//conditions:default": ["$(execpath //src/shared/webpack:dev.config.js)"],
    }) + [
        "--env.TSCONFIG",
        "$(execpath tsconfig.json)",
        "--env.LOADERTEMPL",
        "$(execpath //src/shared/webpack:loader.ejs)",
        "--env.SRCDIR",
        "src/webapp/client",
        "--env.OUTPUT",
        "$@",
    ],
    data = glob([
        "src/**/*.ts",
        "src/**/*.vue",
        "src/**/*.scss",
    ]) + webpack_config_files + [
        "@npm//:node_modules",
        "tsconfig.json",
    ],
)
