package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob(["*.go"]),
    deps = [
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gorilla_sessions//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_lestrrat_go_jwx//jwt:go_default_library",
        "//src/shared/golang/backend/sessions:lib",
        "//src/shared/golang/backend/users:lib",
        "//src/shared/golang/backend/utility:lib",
        "//src/shared/golang/fusionauth:lib",
    ],
    importpath = "gitlab.com/grchive/grchive-v2/webapp/session",
)
