package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v2/shared/backend",
    deps = [
        "//src/shared/golang/backend/sessions:lib",
        "//src/shared/golang/backend/users:lib",
    ],
)


