package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v2/shared/backend",
    deps = [
        "@com_github_jmoiron_sqlx//:go_default_library",
        "//src/shared/golang/backend/audit:lib",
        "//src/shared/golang/backend/engagements:lib",
        "//src/shared/golang/backend/orgs:lib",
        "//src/shared/golang/backend/roles:lib",
        "//src/shared/golang/backend/sessions:lib",
        "//src/shared/golang/backend/users:lib",
        "//src/shared/golang/backend/utility:lib",
    ],
)


