package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "**/*.go"
    ]),
    importpath = "gitlab.com/grchive/grchive-v2/shared/zipfs",
    deps = [
        "@org_golang_x_tools//godoc/vfs:go_default_library",
        "@org_golang_x_tools//godoc/vfs/zipfs:go_default_library",
    ],
)

