package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v2/shared/gin_middleware/gin_acl",
    deps = [
        "@com_github_gin_gonic_gin//:go_default_library",
        "//src/shared/golang/backend:lib",
        "//src/shared/golang/backend/roles:lib",
        "//src/shared/golang/gin_middleware/gin_backend_utility:lib",
    ],
)
