package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v2/shared/gin_middleware/gin_backend_utility",
    deps = [
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gin_gonic_gin//render:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "//src/shared/golang/backend:lib",
        "//src/shared/golang/backend/audit:lib",
        "//src/shared/golang/backend/controls:lib",
        "//src/shared/golang/backend/engagements:lib",
        "//src/shared/golang/backend/gl:lib",
        "//src/shared/golang/backend/inventory:lib",
        "//src/shared/golang/backend/orgs:lib",
        "//src/shared/golang/backend/risks:lib",
        "//src/shared/golang/backend/roles:lib",
        "//src/shared/golang/backend/users:lib",
        "//src/shared/golang/backend/vendors:lib",
    ],
)
