package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v2/shared/vault/auth",
    deps = [
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)
